--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12"
+    "mongodb": "^6.18.0",
+    "mongoose": "^6.13.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
